[project]
# UPDATE THIS BEFORE PUBLISHING
name = "leverage"
description = "Experimentalist that uses a statistical leverage to determine the next data to sample."
authors = [{ name = "Chad Williams", email = "chad_williams@brown.edu" }]
dynamic = ["version"]

readme = "README.md"
license = { text = "MIT license" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core>=3.1.0",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = ""
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
